Fix UserControllerTests